# learning-notebook

./: README.md
01. CV/01. OpenCV-C++/: README.md
01. CV/01. OpenCV/01. OpenCV-C++/codes/10.2 立体视觉中的基础矩阵/: CMakeLists.txt  easy-cmake.sh
01. CV/01. OpenCV/01. OpenCV-C++/codes/10.2 立体视觉中的基础矩阵/src/: main.cpp
01. CV/01. OpenCV/01. OpenCV-C++/codes/chapter12.4/: CMakeLists.txt
01. CV/01. OpenCV/01. OpenCV-C++/codes/chapter12.4/src/: main.cpp
01. CV/02. 目标检测/: README.md
01. CV/04. Object-Tracking/01. ByteTrack/02. C++版代码/: CMakeLists.txt
01. CV/04. Object-Tracking/01. ByteTrack/02. C++版代码/include/bytetrack/: STrack.h  dataType.h  kalmanFilter.h
01. CV/04. Object-Tracking/01. ByteTrack/02. C++版代码/include/eigen-build/share/pkgconfig/: eigen3.pc
01. CV/04. Object-Tracking/01. ByteTrack/02. C++版代码/src/: main.cpp
01. CV/04. Object-Tracking/01. ByteTrack/02. C++版代码/src/bytetrack/: STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
01. CV/05. ReID/: README.md
01. CV/06. 相机模型/: README.md
01. CV/06. 相机模型与相机标定/: README.md
01. CV/07. 大模型/: README.md
01. CV/08. Feature-Points-Matching/: README.md
01. CV/09. Stereo-Vision/: README.md
01. CV/09. 双目深度/: README.md
02. NLP/01. jieba&hanlp/: 01_jieba基本操作.ipynb  06_HanLP基本操作.ipynb
02. NLP/02. Transformer/: README.md
02. 部署/01. TensorRT/: README.md
02. 部署/02. OpenVINO/: README.md
02. 部署/TensorRT/: README.md
02. 部署/TensorRT/02. trtpy inference example/完整代码/: CMakeLists.txt  README.md
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/: easy_cmake.sh
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/crop_image/: crop_image.py
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/gen_and_modify_onnx/: gen_onnx.py
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/src/: interface.cpp
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/src2/: main.cpp
02. 部署/TensorRT/02. trtpy inference example/完整代码/C++ code/tmp/: main.cpp
02. 部署/TensorRT/02. trtpy inference example/完整代码/crop_image/: crop_image.py
02. 部署/TensorRT/02. trtpy inference example/完整代码/include/: inference.hpp
02. 部署/TensorRT/02. trtpy inference example/完整代码/src/: inference.cpp  interface.cpp
02. 部署/TensorRT/02. trtpy inference example/完整代码/src/NanoLog/runtime/: .depend
02. 部署/TensorRT/02. trtpy inference example/完整代码/src/NanoLog/runtime/testHelper/: GeneratedCode.cc
02. 部署/TensorRT/02. trtpy inference example/完整代码/tmp/: Makefile(executable)
03. RL/: README.md
03. RL/codes/: 02. value-iteration-bellman.ipynb  03. policy-iteration-bellman.ipynb  06. SGD-MBGD-BGD.ipynb  07. Q-learning.ipynb  08. Deep-Q-learning.ipynb  09. REINFORCE.ipynb
03. 常用脚本/: 04. image_convert_2_binary.py  06. binary_convert_2_image.py  5. generate_paired_images_from_videos.py  7. base64ToArray.py  README.md
03. 推理与优化加速/02. OpenVINO/: README.md
03. 推理与优化加速/04. RKNN/: README.md
03. 推理与优化加速/06. 量化/: README.md
03. 推理与优化加速/100. 推流拉流推理流程/: README.md
03. 推理与模型优化/04. RKNN/: convert.py
03. 训练/05. 数据集划分/: 02. train_test_split(YOLO).py
03. 训练/07. 初始化随机数种子/: init_seeds.py
03. 训练/09. 各种学习率/: linear.py  one_cycle.py
03. 训练/11. 滑动平均模型ModelEMA/: ModelEMA.py
03. 训练/13. 标签平滑LabelSmoothing/: LabelSmoothing.py
03. 训练/14. 各种损失函数/: 01. FocalLoss.py
03. 部署/03. 剪枝与重参/: README.md  fine_grained_structured_pruning.py  train-prune-finetune.py  train_with_pruning.py  viz_pruning.py  weight_grad_product_pruning.py
03. 部署/04. ONNX/: README.md
04. Model-Inference/02. OpenVINO/cpp/deploy/1. yolov5/: CMakeLists.txt
04. Model-Inference/02. OpenVINO/cpp/deploy/1. yolov5/src/: main.cpp
04. Model-Inference/02. OpenVINO/cpp/deploy/1. yolov5/stage2/: readme.txt
04. Model-Inference/02. OpenVINO/cpp/deploy/1. yolov5/stage3/: readme.txt
04. Model-Inference/05. DLNN/cpp/yolov8-obb/: CMakeLists.txt
04. Model-Inference/05. DLNN/cpp/yolov8-obb/src/yolo/: model-utils.cpp
04. Python/00. 图像相关常用脚本/: 05. array_convert_2_binary.py
04. Python/02. Python计时代码/: torch_timer.py
04. Python/06. 彩色打印/: colorstr.py
04. 图像相关常用脚本/: 07. base64EncodeDecode.py
04. 推理与优化加速/03. BMNN/: README.md
04. 推理与优化加速/04. RKNN/cpp/yolov5/: CMakeLists.txt
04. 推理与优化加速/04. RKNN/cpp/yolov5/stage1/: readme.txt
04. 推理与优化加速/04. RKNN/cpp/yolov5/stage2/: readme.txt
04. 推理与优化加速/04. RKNN/cpp/yolov5/stage2/main-utils/: main_utils.hpp
04. 推理与优化加速/04. RKNN/cpp/yolov5/stage4/: readme.txt
04. 推理与优化加速/04. RKNN/cpp/yolov5/tests/reproduce-rga-error/rknn-utils/: image_utils.c
04. 训练/03. 日志/: README.md
04. 训练/09. 各种学习率/: CosineAnnealingLR.py  README.md
04. 训练/17. letterbox/: letterbox.py
04. 训练/17. 使用Python调用command/: call.py
05. 图像相关常用脚本/: 09. image_rectify.py
05. 训练/: README.md
07. Scripts/: README.md
07. frp内网穿透/: README.md
07. linux/: 02. 常用命令.md
08. linux/: 02. 常用命令.md  03. ubuntu换源.md  05. ssh连接总掉线.md  06 arm版本linux安装conda安不上.md  07. root权限依然删除不了某个文件.md  09. 设置某服务开机自启动.md
09. Docker/: README.md
09. linux/: 02. 常用命令.md  10. vim下格式化json.md  11. 挂载硬盘.md  11. 格式化并挂载硬盘.md
10. Docker/: README.md
10. Linux/: 00. 一个命令获得当前所有的环境.md  02. 常用命令.md
11. FFmpeg/: README.md
12. Docker/: README.md
12. Linux/: 04. 修改DNS.md  08. ldd查看总有些库链接不上.md
13. Git与Github/: README.md
14. 机器学习数学基础/: 机器学习的数学基础.docx
15. Git/: README.md
15. linux/: windows、linux挂载.md
15. 机器学习数学基础/: README.md
16. 面试真题/: README.md
17. huggingface/: README.md
18. ML-Math/: README.md
18. huggingface/: README.md
18. 华为NPU/: 03. torch使用NPU.md
19. Algrithom-Reimplementation/06. Generalized-Hough/hough-template-match/cpp/: CMakeLists.txt
19. Algrithom-Reimplementation/06. Generalized-Hough/hough-template-match/cpp/include/: GeneralHoughTransform.hpp  util.hpp
19. Latex/: README.md
19. MarkDown/: README.md
19. MarkDown用法/: README.md
20. Latex/: README.md
20. MarkDown/: README.md
21. HALCON/: README.md
22. 强化学习/: README.md
3. 常用脚本/: 8. image2base64.py  README.md
7. frp内网穿透/: README.md
C++/: README.md
常用脚本/: README.md  train_test_split.py  video2images.py
部署/TensorRT/trtpy inference/第五次封装（封装成动态库）/: CMakeLists.txt  inference.cpp  inference.hpp
(+637 files in other folders)
